# 16personality

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  README.md  conf.py  index.rst
src/16personality/: __init__.py  __main__ .coco
